# stock-exchange-tracker

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .markdownlintignore  AUTOMATION_SETUP_CHECKLIST.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_BUTTONS_EXPLAINED.md  DASHBOARD_QUICKSTART.md  DAY_TRADING_IMPLEMENTATION_COMPLETE.md  Dockerfile  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  PROJECT_SUMMARY.md  PUBLISHING.md  PUBLISHING_ACTION_PLAN.md  README.md  REALTIME_FEATURES_SUMMARY.md  REALTIME_SETUP.md  main.py  pytest.ini  requirements.txt  setup-daytrading-schedule.bat  setup-daytrading-schedule.sh  setup-scheduled-updates.bat  setup-scheduled-updates.sh  setup.cfg
.github/: dependabot.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  create-release.yml  dependabot-auto-finish.yml  dependabot-auto-prepare.yml  deps-maintenance-auto-finish.yml  deps-maintenance-auto-prepare.yml  deps-maintenance.yml  post-release-sync.yml  pr-auto-finish-reusable.yml  pr-auto-prepare-reusable.yml  pr-description.yml  publish.yml  python-app.yml  schedule.yml
config/: alerts.json  exchanges.json  filters.json
dashboard/: FEATURES.md  README.md  __init__.py  start-dashboard.bat  start-dashboard.sh
dashboard/backend/: __init__.py  dashboard_cli.py  main.py  requirements.txt  user_paths.py
dashboard/backend/api/: history.py  market.py  projections.py  refresh.py  stocks.py
dashboard/backend/models/: market.py  projection.py  stock.py
dashboard/backend/services/: data_loader.py
dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/frontend/src/: App.tsx  index.css
dashboard/frontend/src/components/cards/: KPICard.tsx  OpportunityCard.tsx
dashboard/frontend/src/components/charts/: GainersLosersChart.tsx  SentimentPieChart.tsx
dashboard/frontend/src/components/common/: CompanyLogo.tsx  ExportButton.tsx
dashboard/frontend/src/components/layout/: Header.tsx
dashboard/frontend/src/components/modals/: StockDetailModal.tsx
dashboard/frontend/src/components/tables/: StockTable.tsx
dashboard/frontend/src/contexts/: ThemeContext.tsx
dashboard/frontend/src/hooks/: useAutoRefresh.ts
dashboard/frontend/src/pages/: Dashboard.tsx  HistoricalTrends.tsx  Summary.tsx
dashboard/frontend/src/services/: api.ts
dashboard/frontend/src/types/: index.ts
dashboard/frontend/src/utils/: exportUtils.ts  formatters.ts  logos.ts
data/: projections_2026-01-07.md
docs/: ALERTING_DESIGN.md  DASHBOARD_DESIGN.md  DEPLOYMENT.md  PROJECT_STATUS.md  RELEASE_PROCESS.md  STOCK_PROJECTIONS.md
k8s/: market-helm-cronjob.yaml  stock-tracker-cronjob.yaml
scripts/: check_markdown.py  post_release_changelog.py  version_sync.py
src/: __init__.py
src/alerts/: __init__.py  alert_engine.py  alert_rules.py  alert_storage.py
src/alerts/notifiers/: __init__.py  webhook_notifier.py
src/analysis/: __init__.py  ai_summarizer.py  analyzer.py  projector.py
src/cli/: __init__.py  commands.py  stock_tracker.py
src/core/: __init__.py  config.py  logger.py
src/services/: __init__.py  api_client.py  data_fetcher.py  index_fetcher.py  stock_screener.py
src/storage/: __init__.py  data_storage.py
src/utils/: company_names.py
src/workflows/: __init__.py  tracker.py
tests/: README.md  __init__.py  conftest.py  test_analysis_analyzer.py  test_core_config.py  test_core_logger.py  test_projector.py  test_services_api_client.py  test_storage.py
tests/alerts/: test_alert_engine.py  test_webhook_notifier.py
tests/analysis/: __init__.py  test_ai_summarizer.py  test_analyzer.py  test_projector.py
tests/core/: __init__.py  test_config.py  test_logger.py
tests/dashboard/: __init__.py
tests/dashboard/backend/: test_user_paths.py
tests/dashboard/backend/api/: __init__.py  test_api.py
tests/dashboard/backend/services/: __init__.py  test_data_loader.py
tests/scripts/: test_version_sync.py
tests/services/: __init__.py  test_api_client.py
tests/storage/: __init__.py  test_data_storage.py
tests/workflows/: __init__.py  test_tracker.py
