[metadata]
name = stock_exchange_tracker
version = 0.2.0
description = Stock Exchange Tracker with Projections
author = olawal
license = MIT

[options]
packages = find:
package_dir =
    = .
install_requires =
    pandas>=2.0.0
    requests>=2.31.0
    urllib3>=2.0.0
    python-dotenv>=1.0.0
    openai>=1.0.0
    pytickersymbols>=1.0.0

[options.packages.find]
where = .
include = src*

[options.entry_points]
console_scripts =
    stock-tracker = src.cli.commands:main
