[metadata]
name = stock-exchange-tracker
version = 0.2.0
description = A comprehensive stock market tracking tool with AI-powered insights and projection capabilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Olawal
author_email = lasei_1992@yahoo.com
url = https://github.com/lawaloy/stock-exchange-tracker
project_urls =
    Bug Tracker = https://github.com/lawaloy/stock-exchange-tracker/issues
    Documentation = https://github.com/lawaloy/stock-exchange-tracker#readme
    Source Code = https://github.com/lawaloy/stock-exchange-tracker
license = MIT
license_files = LICENSE
keywords = stocks, trading, market-analysis, finnhub, stock-screener, projections, technical-analysis
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.10
install_requires =
    pandas>=2.0.0
    requests>=2.31.0
    urllib3>=2.0.0
    python-dotenv>=1.0.0
    pytickersymbols>=1.0.0

[options.extras_require]
ai = 
    openai>=1.0.0
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
all =
    openai>=1.0.0
    pytest>=7.0.0
    pytest-cov>=4.0.0

[options.packages.find]
where = .
include = src*

[options.entry_points]
console_scripts =
    stock-tracker = src.cli.commands:main
