[metadata]
name = market-helm
version = 0.2.9
description = MarketHelm — market monitoring, projections, and dashboard; CLI and web UI toward suggestions and execution
long_description = file: README.md
long_description_content_type = text/markdown
author = Olawal
author_email = lasei_1992@yahoo.com
url = https://github.com/lawaloy/market-helm
project_urls =
    Bug Tracker = https://github.com/lawaloy/market-helm/issues
    Documentation = https://github.com/lawaloy/market-helm#readme
    Source Code = https://github.com/lawaloy/market-helm
license = MIT
license_files = LICENSE
keywords = stocks, trading, market-analysis, finnhub, stock-screener, projections, technical-analysis, market-helm, markethelm
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.10
include_package_data = True
install_requires =
    pandas>=2.0.0
    requests>=2.31.0
    urllib3>=2.0.0
    python-dotenv>=1.0.0
    pytickersymbols>=1.0.0
    fastapi>=0.109.0
    uvicorn[standard]>=0.27.0
    httpx>=0.25.0
    pydantic>=2.5.0
    python-multipart>=0.0.6

[options.extras_require]
ai = 
    openai>=1.0.0
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
all =
    openai>=1.0.0
    pytest>=7.0.0
    pytest-cov>=4.0.0

[options.packages.find]
where = .
include = src*, dashboard*

[options.entry_points]
console_scripts =
    market-helm = src.cli.commands:main
    market-helm-web = dashboard.backend.dashboard_cli:main
